RESOLVED FIXED19598
Crash in WebCore::RenderBlock::determineStartPosition
https://bugs.webkit.org/show_bug.cgi?id=19598
Summary Crash in WebCore::RenderBlock::determineStartPosition
Tony Arnold
Reported 2008-06-16 23:21:59 PDT
When trying to use the admin panels of Symphony (http://21degrees.com.au/products/symphony/), the latest builds of WebKit crash. I have attached the crash log.
Attachments
This is the crash log of the reported bug. (28.34 KB, text/plain)
2008-06-16 23:36 PDT, Tony Arnold
no flags
Reduction (will crash) (252 bytes, text/html)
2008-06-17 13:50 PDT, mitz
no flags
Patch (10.25 KB, patch)
2008-06-17 17:49 PDT, mitz
darin: review+
Tony Arnold
Comment 1 2008-06-16 23:36:39 PDT
Created attachment 21752 [details] This is the crash log of the reported bug.
mitz
Comment 2 2008-06-17 00:40:28 PDT
ASSERTION FAILED: floatIndex < floats.size() (WebCore/rendering/bidi.cpp:1169 WebCore::RootInlineBox* WebCore::RenderBlock::determineStartPosition(bool&, WebCore::BidiState&, WTF::Vector<WebCore::RenderBlock::FloatWithRect, 0ul>&, unsigned int&))
mitz
Comment 3 2008-06-17 13:50:02 PDT
Created attachment 21763 [details] Reduction (will crash)
mitz
Comment 4 2008-06-17 17:49:17 PDT
Darin Adler
Comment 5 2008-06-18 19:53:25 PDT
Comment on attachment 21803 [details] Patch r=me
mitz
Comment 6 2008-06-18 20:02:44 PDT
Note You need to log in before you can comment on or make changes to this bug.