WebCore:

Reviewed by Darin Adler.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19598
          Crash in WebCore::RenderBlock::determineStartPosition

        Test: fast/dynamic/floating-to-positioned-2.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle): Changed to also remove relatively
        positioned floats from object lists when they become positioned, because
        then they cease to be floating.

LayoutTests:

        Reviewed by Darin Adler.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19598
          Crash in WebCore::RenderBlock::determineStartPosition

        * fast/dynamic/floating-to-positioned-2.html: Copied from fast/dynamic/floating-to-positioned.html.
        * platform/mac/fast/dynamic/floating-to-positioned-2-expected.checksum: Added.
        * platform/mac/fast/dynamic/floating-to-positioned-2-expected.png: Added.
        * platform/mac/fast/dynamic/floating-to-positioned-2-expected.txt: Added.



Canonical link: https://commits.webkit.org/27102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34654 268f45cc-cd09-0410-ab3c-d52691b4dbfc